# raman_simulator

./: .gitignore  backward_model_script.py  batch_spectrum_control.py  bernoulli_parameter_search.py  changelog.md  control_loop_main.py  controller_evaluation.py  controller_test.py  erwan_validation.py  experiment_flat_spectrum.py  fibers.py  flat_spectrum_backward.py  fw_model_script.py  gd_parameter_serach.py  loading_data_from_file.py  main.py  multi_pump_setup_demo.py  plot.py  plot_error_function.py  plot_inverse.py  pseudo_code.txt  pyproject.toml  raman_amplifier.py  raman_system_validation.py  signal_propagation.py  signals.py  spectrum_amplification.py  spectrum_control.py  test_bw_model.py  test_fw_model.py  todo.md  training_data_generator.py  utils.py  validate_dataset.py
.devcontainer/: devcontainer.json
control_loop/: __init__.py  control_loop.py  test_control_loop.py
controllers/: __init__.py  controller_base.py  controller_cli.py
custom_logging/: __init__.py  logger.py
custom_types/: __init__.py  area.py  constants.py  conversions.py  fiber_attenuation.py  frequency.py  gain.py  length.py  no_unit.py  power.py  unit_registry.py  units.py
data/: Raman_Gain_NF_stevan_Lezaja_November2025.csv  Raman_Gain_efficiency_SSMF_C-band_September2025.csv  __init__.py  data_cleanup.py  res_SMF_2pumps_Lspan100_Pch0dBm_5000runs_Dataset.mat  res_SMF_3pumps_Dataset.mat  res_SMF_3pumps_Lspan100_Pch0dBm_5000runs_Dataset.mat
entry_points/: bernoulli_main.py  gradient_descent_main.py  manual_main.py  spectrum_control.py  train_models.py  training_data_generator.py
experiment/: __init__.py  experiment.py
fibers/: __init__.py  fiber.py  fiber_cli.py
models/: __init__.py  backward_ensemble_nn.py  backward_nn.py  backward_rpm.py  bw_rpm_train.py  forward_nn.py  train_models.py
raman_amplifier/: __init__.py  io.py  raman_amplifier.py  raman_amplifier_cli.py  raman_inputs.py  spectrum.py  test_io.py  test_serialization.py
raman_equations/: raman_equations.py
raman_system/: __init__.py  raman_solver.py  raman_system.py  raman_system_cli.py
utils/: parser.py  (+4 more)
(+86 files in other folders)
