[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-amplifier"
version = "0.1.0"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.scripts]
# train-forward = "models.:main"
# train-backward = "setup.train_backward:main"
# train-all = "setup.train_all:main"

